# camp-demo

./: .dockerignore  .gitignore  Cargo.toml  README.md  REMEMBERME.md  build.sh  build_pandoc.sh  config.toml  main.Dockerfile  pandoc.Dockerfile  plans.md
camp-docker/: compose.yaml
camp-docker/camp/: Dockerfile  config.toml
camp-docker/pandocker/: Dockerfile  pandocker.toml
camp-docker/postgres/: Dockerfile  create-db.sql
data/: dummy_login_foot.html  dummy_login_head.html  index.html  report_pace_head.md  report_social_head.md
demo/: cal.json  config.toml  dates.json  goals.csv  reed.csv  staff.csv  students.csv  teachers.csv
fakeprod_data/: config.toml  goals.csv  staff.csv  students.csv  syms.txt
scratch/: goal.txt
src/: auth.rs  config.rs  course.rs  hist.rs  lib.rs  main.rs  pace.rs  report.rs  user.rs
static/: admin.css  admin.js  boss.css  boss.js  cal.css  cal.js  cal_test.html  camp.css  dialog.css  student.css  teacher.css  teacher.js  util.js
templates/: admin.html  boss.html  boss_archive_button.html  boss_pace_table.html  boss_parent_email.json  boss_summary_row.html  facts_table.md  fall_report.md  fall_summary.md  password_email.json  report.md  report_goal.md  report_summer.md  report_summer_goal.md  spring_report.md  spring_summary.md  student_goal_row.html  student_password_email.json  teacher.html
test/: bad_course_0.mix  bad_course_1.mix  good_course_0.csv  good_course_1.csv  good_course_1.debug  good_course_1.mix  good_course_1.toml  good_course_2.mix  good_students_0.csv  pc_ch4.debug  sm0.json  temp_stud.csv
(+82 files in other folders)
