[package]
name = "camp"
version = "2.0.1"
edition = "2021"
default-run = "camp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.5", features = ["json", "query"] }
blake3 = "^1.3"
csv = "^1.1"
futures = "^0.3"
handlebars = { version = "^4.3", features = ["dir_source"] }
hyper = { version = "^0.14", features = ["client", "http1"] }
hyper-rustls = "^0.23"
log = "^0.4"
once_cell = "^1.13"
rand = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
simplelog = "^0.12"
smallstr = { version = "^0.3", features = ["serde"] }
smallvec = { version = "^1.9", features = ["write"] }
time = { version = "^0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "^1.2", features = ["io-util", "macros", "process", "rt", "time"] }
tokio-postgres = { version = "^0.7", features = ["array-impls", "with-time-0_3"] }
toml = "^0.5"
tower = "^0.4"
tower-http = { version = "^0.3", features = ["fs"] }
zip = "^0.6"

[dev-dependencies]
float-cmp = "^0.9"
serial_test = "^0.8"
tokio = { version = "^1.2", features = ["macros", "rt", "time"] }

[features]
fake = []